# auto-konsole

./: Cargo.toml  README.md
PKGBUILD/: PKGBUILD  auto-konsole.service
src/: args.rs  colorscheme.rs  config.rs  main.rs  theme.rs  theme_listener.rs
src/colorscheme/: path.rs  read.rs  write.rs
