[package]
name = "auto-konsole"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
home = "0.5.12"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
whoami = "1.6.1"
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
